# BlackFiles

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  biome.json  docker-compose.yml  eslint.config.ts  frontend.rs  index.html  package.json  svelte.config.ts  template.docker-compose.yml  template.env  tsconfig.json  vite.config.ts
dbinit/: 0000_init.sql  0001_dense_role_positions.sql  0001_seed.sql  0002_core_seed.sql  0003_upload_links.sql  0004_upload_sessions.sql  0005_public_upload_sessions.sql
frontend/: index.html  package.json  svelte.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/core/: formatUtils.ts  stores.ts  theme.ts  themeUtils.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/types/: file.ts
migrations/: 0001_dense_role_positions.sql  0002_upload_links.sql  0003_upload_sessions.sql
src/: api.rs  auth.rs  files.rs  frontend.rs  main.rs  shared.rs
src/client/: app.html  icon-mappings.json  main.tsx  queryClient.ts  routeTree.gen.ts  theme.ts
src/client/components/: AuthScreen.svelte  Breadcrumb.svelte  BrowsePathBar.tsx  CreateUserModal.tsx  DeleteUserModal.tsx  FileIcon.svelte  FileIcon.tsx  GoogleSpin.svelte  Header.svelte  HeaderBar.tsx  LoadingScreen.svelte  LoadingScreen.tsx  PasswordModal.tsx  ProtectedPage.tsx  RoleFormModal.tsx  SideNav.tsx  UploadPanel.tsx
src/frontend/: index.html
src/server/: api.rs  auth.rs  db.rs  files.rs  frontend.rs  guards.rs  list.rs  main.rs  models.rs  shared.rs  subsonic.rs  test.rs  tus.rs  upload_links.rs
(+30 files in other folders)
