[package]
name = "blackfiles"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = { version = "0.15.7" }
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "fs"]}

[[bin]]
name = "blackfiles"
path = "src/server/main.rs"