[package]
name = "blackfiles"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = { version = "0.15.7" }
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = "0.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "fs"] }

# Database
deadpool-postgres = { version = "0.14", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }

# Auth
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
serde_json = "1"

[[bin]]
name = "blackfiles"
path = "src/server/main.rs"